# stefan_enthalpy

./: .gitignore  CMakeLists.txt  build_debug.sh  build_release.sh  run.sh  solver3d.hpp  stefan.cpp
configs/: example2d.xml  example3d.xml
src/io/vtk/: BasicVtkWriter.h  SnapshotVtkWriter.h
src/math/: AABB2.h  AABB3.h  MatrixMaths.h  Polynomial.h  Spaces.h  Stride.h  Tensor2.h  Tensor3.h  Vector2.h  Vector3.h  VectorMaths.h
src/mesh/: MeshIO.h  MeshIO.inl
src/stefan/: SolverBase.h  material_info.h  material_info.hpp  mesh.h  settings_parser.h  solver.h  solver2d.hpp  solver3d.hpp  stefan.cpp  submesh_effects.h
src/utils/: Utils.h
vc2017/stefan/: stefan.sln
vc2017/stefan/stefan/: stefan.vcxproj
